[package]
name = "tree-sitter-rst"
description = "reStructuredText grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "rst"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/stsewd/tree-sitter-rst"
homepage = "https://stsewd.dev/tree-sitter-rst/"
edition = "2018"
license = "MIT"
readme = "README.md"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
