[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-rst"
description = "Python grammar for reStructuredText"
version = "0.23.6"
keywords = ["incremental", "parsing", "tree-sitter", "restructuredtext"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "Santos Gallegos" },
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/stsewd/tree-sitter-rst"

[project.optional-dependencies]
core = ["tree-sitter>=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
