[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-rst"
description = "reStructuredText grammar for tree-sitter"
version = "0.2.0"
keywords = ["incremental", "parsing", "tree-sitter", "rst"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Santos Gallegos", email = "stsewd@proton.me" }]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/stsewd/tree-sitter-rst"
Funding = "https://github.com/sponsors/stsewd"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "bindings",
  "setup.py",
  "src",
  "docs",
  "node_modules",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
